--- a/resources/pages/authority/role/role.html
+++ b/resources/pages/authority/role/role.html
@@ -16,22 +16,22 @@
           name="description" />
     <meta content="" name="author" />
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
-    <link href="../../../assets/global/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <link href="../../../assets/global/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css" />
-    <link href="../../../assets/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="../../../assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />
+    <link href="../../../../assets/global/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link href="../../../../assets/global/plugins/simple-line-icons/simple-line-icons.min.css" rel="stylesheet" type="text/css" />
+    <link href="../../../../assets/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="../../../../assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />
     <!-- END GLOBAL MANDATORY STYLES -->
     <!-- BEGIN PAGE LEVEL PLUGINS -->
-    <link href="../../../assets/global/plugins/bootstrap-table/bootstrap-table.min.css" rel="stylesheet" type="text/css" />
+    <link href="../../../../assets/global/plugins/bootstrap-table/bootstrap-table.min.css" rel="stylesheet" type="text/css" />
     <!-- END PAGE LEVEL PLUGINS -->
     <!-- BEGIN THEME GLOBAL STYLES -->
-    <link href="../../../assets/global/css/components.min.css" rel="stylesheet" id="style_components" type="text/css" />
-    <link href="../../../assets/global/css/plugins.min.css" rel="stylesheet" type="text/css" />
+    <link href="../../../../assets/global/css/components.min.css" rel="stylesheet" id="style_components" type="text/css" />
+    <link href="../../../../assets/global/css/plugins.min.css" rel="stylesheet" type="text/css" />
     <!-- END THEME GLOBAL STYLES -->
     <!-- BEGIN THEME LAYOUT STYLES -->
-    <link href="../../../assets/layouts/layout/css/layout.min.css" rel="stylesheet" type="text/css" />
-    <link href="../../../assets/layouts/layout/css/themes/darkblue.min.css" rel="stylesheet" type="text/css" id="style_color" />
-    <link href="../../../assets/layouts/layout/css/custom.min.css" rel="stylesheet" type="text/css" />
+    <link href="../../../../assets/layouts/layout/css/layout.min.css" rel="stylesheet" type="text/css" />
+    <link href="../../../../assets/layouts/layout/css/themes/darkblue.min.css" rel="stylesheet" type="text/css" id="style_color" />
+    <link href="../../../../assets/layouts/layout/css/custom.min.css" rel="stylesheet" type="text/css" />
     <!-- END THEME LAYOUT STYLES -->
     <link rel="shortcut icon" href="favicon.ico" /> </head>
 <!-- END HEAD -->
@@ -99,39 +99,39 @@
 
 <!-- END QUICK NAV -->
 <!--[if lt IE 9]>
-<script src="../../../assets/global/plugins/respond.min.js"></script>
-<script src="../../../assets/global/plugins/excanvas.min.js"></script>
-<script src="../../../assets/global/plugins/ie8.fix.min.js"></script>
+<script src="../../../../assets/global/plugins/respond.min.js"></script>
+<script src="../../../../assets/global/plugins/excanvas.min.js"></script>
+<script src="../../../../assets/global/plugins/ie8.fix.min.js"></script>
 <![endif]-->
 <!-- BEGIN CORE PLUGINS -->
-<script src="../../../assets/global/plugins/jquery.min.js" type="text/javascript"></script>
-<script src="../../../assets/global/plugins/jquery.cookie.js" type="text/javascript"></script>
-<script src="../../../assets/global/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="../../../assets/global/plugins/js.cookie.min.js" type="text/javascript"></script>
-<script src="../../../assets/global/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
-<script src="../../../assets/global/plugins/jquery.blockui.min.js" type="text/javascript"></script>
-<script src="../../../assets/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script>
+<script src="../../../../assets/global/plugins/jquery.min.js" type="text/javascript"></script>
+<script src="../../../../assets/global/plugins/jquery.cookie.js" type="text/javascript"></script>
+<script src="../../../../assets/global/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="../../../../assets/global/plugins/js.cookie.min.js" type="text/javascript"></script>
+<script src="../../../../assets/global/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
+<script src="../../../../assets/global/plugins/jquery.blockui.min.js" type="text/javascript"></script>
+<script src="../../../../assets/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script>
 <!-- END CORE PLUGINS -->
 <!-- BEGIN PAGE LEVEL PLUGINS -->
-<script src="../../../assets/global/plugins/bootstrap-table/bootstrap-table.min.js" type="text/javascript"></script>
-<script src="../../../assets/global/plugins/bootstrap-table/locale/bootstrap-table-zh-CN.js" type="text/javascript"></script>
+<script src="../../../../assets/global/plugins/bootstrap-table/bootstrap-table.min.js" type="text/javascript"></script>
+<script src="../../../../assets/global/plugins/bootstrap-table/locale/bootstrap-table-zh-CN.js" type="text/javascript"></script>
 
 <!-- END PAGE LEVEL PLUGINS -->
 <!-- BEGIN THEME GLOBAL SCRIPTS -->
-<script src="../../../assets/global/scripts/app.min.js" type="text/javascript"></script>
+<script src="../../../../assets/global/scripts/app.min.js" type="text/javascript"></script>
 <!-- END THEME GLOBAL SCRIPTS -->
 <!-- BEGIN PAGE LEVEL SCRIPTS -->
-<script src="../../../assets/pages/scripts/table-bootstrap.min.js" type="text/javascript"></script>
+<script src="../../../../assets/pages/scripts/table-bootstrap.min.js" type="text/javascript"></script>
 
 <!-- END PAGE LEVEL SCRIPTS -->
 <!-- BEGIN THEME LAYOUT SCRIPTS -->
-<script src="../../../assets/layouts/layout/scripts/layout.min.js" type="text/javascript"></script>
-<script src="../../../assets/layouts/layout/scripts/demo.min.js" type="text/javascript"></script>
-<script src="../../../assets/layouts/global/scripts/quick-sidebar.min.js" type="text/javascript"></script>
-<script src="../../../assets/layouts/global/scripts/quick-nav.min.js" type="text/javascript"></script>
-<script src="../../../assets/global/plugins/layer/layer.js" type="text/javascript"></script>
-<script src="../../../resources/scripts/common.js" type="text/javascript"></script>
-<script src="../../../resources/scripts/role/role_list.js" type="text/javascript"></script>
+<script src="../../../../assets/layouts/layout/scripts/layout.min.js" type="text/javascript"></script>
+<script src="../../../../assets/layouts/layout/scripts/demo.min.js" type="text/javascript"></script>
+<script src="../../../../assets/layouts/global/scripts/quick-sidebar.min.js" type="text/javascript"></script>
+<script src="../../../../assets/layouts/global/scripts/quick-nav.min.js" type="text/javascript"></script>
+<script src="../../../../assets/global/plugins/layer/layer.js" type="text/javascript"></script>
+<script src="../../../../resources/scripts/common.js" type="text/javascript"></script>
+<script src="../../../../resources/scripts/role/role_list.js" type="text/javascript"></script>
 
 <!-- END THEME LAYOUT SCRIPTS -->
 </body>
